fixed overflow

--- a/present/styles.css
+++ b/present/styles.css
@@ -20,7 +20,7 @@ body {
     background-attachment: fixed;
     height: 100vh;
     width: 100vw;
-    overflow: none;
+    overflow: hidden;
 }
 
 @keyframes rotateToolOnce {
